# orchestrating-migrating-computations-poc

./: .gitignore  Cargo.toml  README.md  build.sh  build_for_experiment_1.sh  build_for_experiment_2.sh  build_project.sh  clean.sh  loop.wasm  run_aarch64.sh  run_x64.sh  run_x86.sh
experiment_data/: distances.txt
experiment_data/nodes_conf/: node_0  node_1  node_2
experiment_data/utilities/: Cargo.toml
experiment_data/utilities/src/: main.rs
experiment_script/: configure_folder.sh  enable_centralized.sh  lp_task_aarch64  lp_task_x86  main.sh  start_orchestrator.sh
experiment_script/low_priority_task/: Cargo.toml
experiment_scripts/: clear_log.sh  configure_folder.sh  enable_centralized.sh  enable_distributed.sh  lp_task_aarch64  lp_task_x86  main.sh  start.sh  start_local.sh  start_local_2.sh  start_orchestrator.sh  stop_orchestrator.sh  test_main_script.sh
experiment_scripts/low_priority_task/: build.sh
experiment_scripts/low_priority_task/src/: main.rs
experiment_scripts/speed_up_tester/: Cargo.toml  build.sh
experiment_scripts/speed_up_tester/src/: main.rs
not_to_commit/: loop.wasm
requests/: requests.txt
requests/0_0_req/: module.wasm
results/node_2/: conv_d.txt
sporadic_server/: Cargo.toml
sporadic_server/src/: lib.rs  log_events.rs  main.rs  utilities.rs  workload.rs
src/: config.rs
