[package]
name = "orchestrating-migrating-computations-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
# paho-mqtt = "0.13.3"
sporadic_server = {path = "sporadic_server"}
paho-mqtt = { version = "0.13", default-features=false, features=["bundled"] }
futures = "0.3.31"
libc = "0.2.174"
wasmtime = "31.0.0"
wasmtime-wasi = "31.0.0"
zip = "4.3.0"

[features]
default = ["print_log", "timing_log", "distributed"]
experiment_1_centralized = ["timing_log", "centralized"]
experiment_1_distributed = ["timing_log", "distributed"]
experiment_2_centralized = ["print_log", "migration_log", "centralized"]
experiment_2_distributed = ["migration_log", "distributed"]
centralized_with_log = ["print_log", "timing_log", "centralized"]
distributed_with_log = ["print_log", "timing_log", "distributed"]
periodic_activation = []
print_log = []
timing_log = []
migration_log = []
centralized = []
distributed = []